--- a/css/styles.css
+++ b/css/styles.css
@@ -5771,6 +5771,7 @@ textarea.form-control-lg {
 
 .carousel {
   position: relative;
+  margin-bottom: 1rem;
 }
 
 .carousel.pointer-event {
@@ -10974,7 +10975,7 @@ p.lead {
   justify-content: center;
   height: 3.5rem;
   width: 3.5rem;
-  background-color: #495057;
+  background-color: #20c997;
   color: #fff;
   border-radius: 100%;
   font-size: 1.5rem;
@@ -10986,6 +10987,25 @@ p.lead {
 .social-icons .social-icon:hover {
   background-color: #0c55b4;
 }
+
+.social-icon-md {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  height: 2.5rem;
+  width: 2.5rem;
+  background-color: #20c997;
+  color: #fff;
+  border-radius: 100%;
+  font-size: 1.5rem;
+  margin-right: 1.5rem;
+}
+
+.social-icon-md:hover {
+  background-color: #0c55b4;
+  color: #fff;
+}
+
 
 .dev-icons {
   font-size: 3rem;
