--- a/css/mycss3.css
+++ b/css/mycss3.css
@@ -19,16 +19,6 @@ html,body{
     --stronger-font-color: #45a29e;
 }
 
-/* #introduction{
-    background-color: aliceblue;
-}
-#project{
-    background-color: beige;
-}
-#skills{
-    background-color: aliceblue;
-} */
-
 nav{
     color: var(--bg-color);
 }
@@ -121,6 +111,10 @@ section.resume-section {
       padding-right: 3rem;
       padding-top: 5rem;
       padding-bottom: 5rem;
+
+	margin-left: 10em; 
+	/* from .row */
+
     }
   }
 
@@ -128,16 +122,20 @@ section.resume-section {
     margin-top: 2em;
 }
 
+
 .row{
     margin: auto;
 }
 
-@media (min-width: 992px){
+.sub-row{
+	margin-top: 5%;
+}
+
+/* @media (min-width: 992px){
     .row{
-        margin-left:10em;
         padding-left:3em;
     }
-}
+} */
 
 h1{
     font-size: 5em;
@@ -155,6 +153,10 @@ h2{
     color: var(--strongest-font-color);
 }
 
+h2.sub-title{
+	color: var(--stronger-font-color);
+}
+
 h3{
     color: var(--stronger-font-color);
 }
@@ -167,24 +169,149 @@ p{
     margin-top: 1.5em;
 }
 
-hr {
-    margin: 20px auto;
-    color: #F05F44;
-    border: 3px solid #F05F44;
-    max-width: 65px;
-    opacity: 1;  
+cite{
+	color: var(--main-font-color);
+	font-size: 0.75em;
 }
 
 .icon{
     font-size: 2.5em;
-    color: var(--stronger-font-color);
-    margin-top: 0.3em;
-    padding-right: 0.2em;
+    color: var(--strongest-font-color);
 }
 
-footer{
-    margin: 10em;
-    background-color: var(--stronger-font-color);
-    color: var(--sub-font-color);
+.icon:hover{
+	color: var(--stronger-font-color);
+}
 
+.icon-stamp{
+    font-size: 2.5em;
+    color: var(--stronger-font-color);
+}
+
+a {
+    display: inline-block;
+    text-decoration: none;
+    text-decoration-skip-ink: auto;
+    color: inherit;
+    position: relative;
+}
+a:hover{
+	color: inherit;
+}
+
+.btn-outline-light{
+	color: var(--strongest-font-color);
+	border-color: var(--strongest-font-color);
+}
+
+.btn-outline-light:hover{
+	color: var(--strongest-font-color);
+	border-color: var(--strongest-font-color);
+	background-color: rgba(100,255,218,0.1);
+}
+
+ul, li{
+	color: var(--main-font-color);
+}
+
+
+/* tiles */
+.wrap{
+    margin: 50px, auto, 0, auto;
+    width: 100%;
+    display: flex;
+    align-items: space-around;
+    max-width: 1200px;
+}
+
+@media (max-width: 991px) {
+    .wrap {
+        /* flex-direction: column; */
+        width: 850px;
+    }
+}
+
+@media (max-width: 768px){
+    .wrap{
+        flex-direction: column;
+        width: 400px;
+    }
+}
+
+.tile{
+	width: 250px;
+	height: 250px;
+	margin: 10px;
+	background-color: #2b7470;
+	display: inline-block;
+	background-size: cover;
+	position: relative;
+	cursor: pointer;
+	transition: all 0.4s ease-out;
+	box-shadow: 0px 35px 77px -17px rgba(0,0,0,0.44);
+	overflow:hidden;
+	color:white;
+	/* font-family:'Roboto'; */
+}
+.tile img
+{
+	height:100%;
+	width:100%;
+	position:absolute;
+	top:0;
+	left:0;
+	z-index:0;
+	transition: all 0.4s ease-out;
+}
+.tile .text
+{
+/*   z-index:99; */
+  position:absolute;
+  padding:30px;
+  height:calc(100% - 60px);
+}
+.tile h3
+{
+	color: var(--main-font-color);
+	font-weight:300;
+	margin:0;
+	text-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+}
+.tile h4
+{
+	color: var(--main-font-color);
+	font-weight:100;
+	margin:20px 0 0 0;
+	font-style:italic;
+	transform: translateX(200px);
+}
+.tile p
+{
+	color: var(--main-font-color);
+	font-weight:300;
+	margin:20px 0 0 0;
+	line-height: 25px;
+	/*   opacity:0; */
+	transform: translateX(-200px);
+	transition-delay: 0.2s;
+}
+.animate-text
+{
+	opacity:0;
+	transition: all 0.6s ease-in-out;
+}
+.tile:hover
+{
+	/*   background-color:#99aeff; */
+	box-shadow: 0px 35px 77px -17px rgba(0,0,0,0.64);
+	transform:scale(1.05);
+}
+.tile:hover img
+{
+	opacity: 0.2;
+}
+.tile:hover .animate-text
+{
+	transform:translateX(0);
+	opacity:1;
 }
