--- a/css/mycss3.css
+++ b/css/mycss3.css
@@ -137,10 +137,20 @@ section.resume-section {
     }
 } */
 
+.breadcrumb{
+    margin-left: 1em;
+}
+
+.chevron{
+    margin-top: 1.5em;
+}
+
 h1{
     font-size: 5em;
     font-weight: 500;
     color: var(--strongest-font-color);
+    line-height: 0.75em;
+    margin-bottom: 0.25em;
 }
 
 #introduction h2{
@@ -150,7 +160,7 @@ h1{
 }
 
 h2{
-    color: var(--strongest-font-color);
+    color: var(--stronger-font-color);
 }
 
 h2.sub-title{
@@ -158,7 +168,7 @@ h2.sub-title{
 }
 
 h3{
-    color: var(--stronger-font-color);
+    color: var(--strongest-font-color);
 }
 
 p{
@@ -174,6 +184,18 @@ cite{
 	font-size: 0.75em;
 }
 
+.subheading{
+    color: var(--main-font-color);
+    font-weight: 250;
+}
+
+.date{
+    color: var(--stronger-font-color);
+    font-weight: 250;
+}
+
+
+
 .icon{
     font-size: 2.5em;
     color: var(--strongest-font-color);
@@ -186,6 +208,10 @@ cite{
 .icon-stamp{
     font-size: 2.5em;
     color: var(--stronger-font-color);
+}
+
+.icon-sm{
+    font-size: 1.5em;
 }
 
 a {
