--- a/css/mycss.css
+++ b/css/mycss.css
@@ -1,5 +1,7 @@
 @import "compass/css3";
 
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
+
 @import url(https://fonts.googleapis.com/css?family=Lato:300,400,900);
 html,body{
     width: 100%;
@@ -39,7 +41,7 @@ nav{
   #sideNav .navbar-toggler:focus {
     outline-color: #d48a6e;
   }
-  
+
 @media (min-width: 992px) {
     #sideNav {
         padding-left: 0;
@@ -99,7 +101,7 @@ section.resume-section {
   section.resume-section .resume-section-content {
     width: 100%;
   }
-  
+
   @media (min-width: 768px) {
     section.resume-section {
       min-height: 100vh;
@@ -149,8 +151,8 @@ h1{
     font-size: 5em;
     font-weight: 500;
     color: var(--strongest-font-color);
-    line-height: 0.75em;
-    margin-bottom: 0.25em;
+    line-height: 0.8em;
+    margin: 0.25em auto;
 }
 
 #introduction h2{
@@ -169,6 +171,27 @@ h2.sub-title{
 
 h3{
     color: var(--strongest-font-color);
+}
+
+h4{
+    color: var(--stronger-font-color);
+    font-weight: 300;
+}
+
+a {
+    display: inline-block;
+    text-decoration: none;
+    text-decoration-skip-ink: auto;
+    color: inherit;
+    position: relative;
+}
+a:hover{
+	color: inherit;
+}
+
+
+ul, li{
+	color: var(--main-font-color);
 }
 
 p{
@@ -197,7 +220,7 @@ cite{
 
 
 .icon{
-    font-size: 2.5em;
+    font-size: 2em;
     color: var(--strongest-font-color);
 }
 
@@ -214,15 +237,8 @@ cite{
     font-size: 1.5em;
 }
 
-a {
-    display: inline-block;
-    text-decoration: none;
-    text-decoration-skip-ink: auto;
-    color: inherit;
-    position: relative;
-}
-a:hover{
-	color: inherit;
+.bi-star-fill, .bi-star{
+    color: var(--stronger-font-color);
 }
 
 .btn-outline-light{
@@ -236,10 +252,29 @@ a:hover{
 	background-color: rgba(100,255,218,0.1);
 }
 
-ul, li{
-	color: var(--main-font-color);
+section#skills li{
+    list-style: none;
 }
 
+.right-column li{
+    list-style: circle !important;
+}
+
+.skill-box{
+    border: solid;
+    border-color: var(--stronger-font-color);
+    border-radius: 0.75em;
+    border-width: 0.02em;
+    margin: 0.5em;
+    padding: 0.5em;
+    background-color: #253542;
+}
+
+.skill-box h3{
+    text-align: center;
+    margin-bottom: 0.25em;
+
+}
 
 /* tiles */
 .wrap{
