--- a/css/mycss.css
+++ b/css/mycss.css
@@ -189,9 +189,27 @@ a:hover{
 	color: inherit;
 }
 
+.social-icon a{
+    color: var(--strongest-font-color);
+}
+
 
 ul, li{
 	color: var(--main-font-color);
+}
+
+.intro-list li{
+    list-style: none;
+    /* font-size: 1em; */
+    margin-bottom: 0.5em;
+}
+.intro-list li:before{
+    content: '#';
+    color: #66fcf1;
+    font-size: 115%;
+    font-weight: 200;
+    vertical-align: baseline;
+    display: inline;
 }
 
 p{
@@ -222,6 +240,7 @@ cite{
 .icon{
     font-size: 2em;
     color: var(--strongest-font-color);
+    margin-right: 0.15em;
 }
 
 .icon:hover{
@@ -323,6 +342,7 @@ section#skills li{
 	left:0;
 	z-index:0;
 	transition: all 0.4s ease-out;
+    filter: brightness(50%);
 }
 .tile .text
 {
