fix the link and css for links to another index pg

--- a/css/mycss.css
+++ b/css/mycss.css
@@ -196,6 +196,13 @@ a:hover{
 	color: inherit;
 }
 
+#introduction a{
+    color: var(--strongest-font-color);
+}
+#introduction a:hover{
+    color: var(--stronger-font-color);
+}
+
 ul, li{
 	color: var(--main-font-color);
 }
